[package]
name = "following-no-reposts-feed"
version = "0.1.0"
edition = "2021"

[dependencies]
# Jetstream consumer
atproto-jetstream = { version = "0.13", features = ["clap"] }

# AT Protocol libraries
atrium-api = "0.1"
atrium-xrpc-client = "0.1"

# Web server
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite", "chrono", "uuid"] }

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Utilities
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
clap = { version = "4.0", features = ["derive"] }
async-trait = "0.1"

# JWT handling
jsonwebtoken = "9.0"

# HTTP client
reqwest = { version = "0.11", features = ["json"] }

# Environment
dotenvy = "0.15"
