[package]
name = "following-no-reposts-feed"
version = "0.1.0"
edition = "2021"

[dependencies]
# WebSocket for Jetstream
tokio-tungstenite = { version = "0.18", features = ["native-tls"] }
futures = "0.3"
url = "2.3"

# AT Protocol libraries
atrium-xrpc-client = "0.5"
atrium-identity = "0.1"
atrium-crypto = "0.1"
atrium-common = "0.1"

# Web server
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite", "chrono", "uuid"] }

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Utilities
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
clap = { version = "4.0", features = ["derive", "env"] }
async-trait = "0.1"

# JWT handling
jwt-compact = { version = "0.8", features = ["es256k"] }

# HTTP client
reqwest = { version = "0.11", features = ["json"] }

# Environment
dotenvy = "0.15"

# Caching
moka = { version = "0.12", features = ["future"] }

# Encoding
base64 = "0.22"
